tests/update/attribute_id_none/test.stderr
error: A struct field must be annotated with `#[crud_id]` to specify the database table
 --> tests/update/attribute_id_none/test.rs:5:13
  |
5 |   struct Test {
  |  _____________^
6 | |     id: i64,
7 | |     name: String,
8 | | }
  | |_^

error[E0599]: no method named `update` found for struct `Test` in the current scope
  --> tests/update/attribute_id_none/test.rs:16:6
   |
5  |   struct Test {
   |   ----------- method `update` not found for this struct
...
12 |       let _result = Test {
   |  ___________________-
13 | |         id: 1,
14 | |         name: "Debbie".to_string(),
15 | |     }
16 | |     .update()
   | |     -^^^^^^ method not found in `Test`
   | |_____|
   |
